--- a/index.html
+++ b/index.html
@@ -189,15 +189,21 @@
 </div>
 </div>
 </nav>
-<div class="alert alert-nhl-gold alert-dismissible mt-2" role="alert">
-<span class="alert-icon">⚡</span>
-<span class="nhl-gold-text">
-    PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO &amp; BOOKMARK OUR BACKUP LINKS &amp; JOIN THE DC
-    <br/>
-<a class="nhl-link" href="https://roxiestreams.cc/" rel="noopener" target="_blank">
-roxiestreams.cc Status page: roxiestreams.cc or https://rentry.co/roxiestreams0
+<div class="alert alert-warning alert-dismissible mt-2" role="alert">
+⚡ PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO & BOOKMARK OUR BACKUP LINKS  
+<br/>
+<strong>Status page:</strong> 
+<a href="https://roxiestreams.cc/" target="_blank" rel="noopener">
+roxiestreams.cc
+</a>
+&nbsp;|&nbsp;
+<a href="https://rentry.co/roxiestreams0" target="_blank" rel="noopener">
+https://rentry.co/roxiestreams0
 </a>
 <br/>
+If you're having issues with streams, try refreshing the page or using an incognito window.
+<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+</div>
     If you’re having issues with streams, please try refreshing the page or using an incognito window.
 </span>
 <button aria-label="Close" class="btn-close" data-bs-dismiss="alert" type="button"></button>
