--- a/nba.html
+++ b/nba.html
@@ -343,6 +343,68 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for February 12, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         Milwaukee Bucks vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        February 12, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 13, 2026 4:30 PM:00" data-start="February 12, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         Portland Trail Blazers vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        February 12, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 13, 2026 6:00 PM:00" data-start="February 12, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         Dallas Mavericks vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        February 12, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 13, 2026 7:00 PM:00" data-start="February 12, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
