--- a/soccer.html
+++ b/soccer.html
@@ -99,69 +99,39 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Aston Villa vs Brighton</a></td>
-<td>February 11, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Brentford vs Arsenal</a></td>
+<td>February 12, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 12, 2026 11:30:00 AM" data-start="February 11, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Crystal Palace vs Burnley</a></td>
-<td>February 11, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Atlético Madrid vs Barcelona</a></td>
+<td>February 12, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 12, 2026 11:30:00 AM" data-start="February 11, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Man City vs Fulham</a></td>
-<td>February 11, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Athletico-PR vs Santos</a></td>
+<td>February 11, 2026 2:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 12, 2026 11:30:00 AM" data-start="February 11, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Nottingham Forest vs Wolves</a></td>
-<td>February 11, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Fluminense vs Botafogo</a></td>
+<td>February 11, 2026 2:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 12, 2026 11:30:00 AM" data-start="February 11, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Bayern München vs Leipzig</a></td>
-<td>February 11, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Argentinos Juniors vs River Plate</a></td>
+<td>February 11, 2026 4:15 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 12, 2026 12:00:00 PM" data-start="February 11, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Internacional vs Palmeiras</a></td>
+<td>February 11, 2026 4:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 12, 2026 11:45:00 AM" data-start="February 11, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Bologna vs Lazio</a></td>
-<td>February 11, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Cruz Azul vs Vancouver FC</a></td>
+<td>February 11, 2026 5:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 12, 2026 12:00:00 PM" data-start="February 11, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Athletic Club vs Real Sociedad</a></td>
-<td>February 11, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 12, 2026 12:00:00 PM" data-start="February 11, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Sunderland vs Liverpool</a></td>
-<td>February 11, 2026 12:15 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 12, 2026 12:15:00 PM" data-start="February 11, 2026 12:15:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Mirassol vs Cruzeiro</a></td>
-<td>February 11, 2026 14:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 12, 2026 02:00:00 PM" data-start="February 11, 2026 02:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">São Paulo vs Grêmio</a></td>
-<td>February 11, 2026 16:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 12, 2026 04:30:00 PM" data-start="February 11, 2026 04:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Alianza Lima vs 2 de Mayo</a></td>
-<td>February 11, 2026 16:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 12, 2026 04:30:00 PM" data-start="February 11, 2026 04:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">América vs Olimpia</a></td>
-<td>February 11, 2026 17:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 12, 2026 05:00:00 PM" data-start="February 11, 2026 05:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">Monterrey vs Xelajú</a></td>
-<td>February 11, 2026 19:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 12, 2026 07:00:00 PM" data-start="February 11, 2026 07:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
