--- a/index.html
+++ b/index.html
@@ -190,19 +190,19 @@
 </div>
 </nav>
 <div class="alert alert-warning alert-dismissible mt-2" role="alert">
-⚡ PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO & BOOKMARK OUR BACKUP LINKS  
+⚡ PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO &amp; BOOKMARK OUR BACKUP LINKS  
 <br/>
-<strong>Status page:</strong> 
-<a href="https://roxiestreams.cc/" target="_blank" rel="noopener">
+<strong>Status page:</strong>
+<a href="https://roxiestreams.cc/" rel="noopener" target="_blank">
 roxiestreams.cc
 </a>
-&nbsp;|&nbsp;
-<a href="https://rentry.co/roxiestreams0" target="_blank" rel="noopener">
+ | 
+<a href="https://rentry.co/roxiestreams0" rel="noopener" target="_blank">
 https://rentry.co/roxiestreams0
 </a>
 <br/>
 If you're having issues with streams, try refreshing the page or using an incognito window.
-<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+<button class="btn-close" data-bs-dismiss="alert" type="button"></button>
 </div>
 <div class="mt-5">
 <h2 class="text-center" style="font-family: 'Kanit', sans-serif; font-weight: bold; color: #f8b8d0;">Upcoming Events</h2>
@@ -217,28 +217,33 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 11, 2026</td>
+<td>February 12, 2026</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 10, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
-<td>February 11, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="February 12, 2026 11:30:00 AM" data-start="February 11, 2026 11:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/f1">Formula 1 - Preseason Testing [LAST HOUR]</a></td>
+<td>February 12, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="February 13, 2026 07:00:00 AM" data-start="February 12, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Premier League</a></td>
+<td>February 12, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 13, 2026 12:00:00 PM" data-start="February 12, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Copa Del Rey</a></td>
+<td>February 12, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 13, 2026 12:00:00 PM" data-start="February 12, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Craftsman Truck Series</a></td>
+<td>February 12, 2026 2:00 PM</td>
+<td><span class="countdown-timer" data-end="February 13, 2026 02:00:00 PM" data-start="February 12, 2026 02:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 11, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 12, 2026 04:00:00 PM" data-start="February 11, 2026 04:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/aew">AEW</a></td>
-<td>February 11, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="February 12, 2026 05:00:00 PM" data-start="February 11, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/f1">Formula 1 [LAST HOUR]</a></td>
-<td>February 12, 2026 4:00 AM</td>
-<td><span class="countdown-timer" data-end="February 13, 2026 04:00:00 AM" data-start="February 12, 2026 04:00:00 AM"></span></td>
+<td>February 11, 2026 4:30 PM</td>
+<td><span class="countdown-timer" data-end="February 12, 2026 04:30:00 PM" data-start="February 11, 2026 04:30:00 PM"></span></td>
 </tr>
 </tbody>
 </table>
