--- a/index.html
+++ b/index.html
@@ -226,6 +226,11 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <td><span class="countdown-timer" data-end="February 13, 2026 07:00:00 AM" data-start="February 12, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.info/darts">Premier League Darts - Night 2</a></td>
+<td>February 12, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="February 13, 2026 11:00:00 AM" data-start="February 12, 2026 11:00:00 AM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.info/soccer-streams-1">Premier League</a></td>
 <td>February 12, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 13, 2026 12:00:00 PM" data-start="February 12, 2026 12:00:00 PM"></span></td>
@@ -242,8 +247,8 @@ If you're having issues with streams, try refreshing the page or using an incogn
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 11, 2026 4:30 PM</td>
-<td><span class="countdown-timer" data-end="February 12, 2026 04:30:00 PM" data-start="February 11, 2026 04:30:00 PM"></span></td>
+<td>February 12, 2026 4:30 PM</td>
+<td><span class="countdown-timer" data-end="February 13, 2026 04:30:00 PM" data-start="February 12, 2026 04:30:00 PM"></span></td>
 </tr>
 </tbody>
 </table>
