--- a/soccer.html
+++ b/soccer.html
@@ -99,38 +99,58 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Brentford vs Arsenal</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">PSG vs Rennes</a></td>
 <td>February 12, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 13, 2026 12:00:00 PM" data-start="February 12, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Atlético Madrid vs Barcelona</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Santa Clara vs Benfica</a></td>
 <td>February 12, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 13, 2026 12:00:00 PM" data-start="February 12, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Athletico-PR vs Santos</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Dortmund vs Mainz 05</a></td>
 <td>February 12, 2026 2:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 13, 2026 02:00:00 PM" data-start="February 12, 2026 02:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Fluminense vs Botafogo</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Wrexham vs Ipswich Town</a></td>
 <td>February 12, 2026 2:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 13, 2026 02:30:00 PM" data-start="February 12, 2026 02:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Argentinos Juniors vs River Plate</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Hull City vs Chelsea</a></td>
 <td>February 12, 2026 4:15 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 13, 2026 04:15:00 PM" data-start="February 12, 2026 04:15:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Internacional vs Palmeiras</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Pisa vs Milan</a></td>
 <td>February 12, 2026 4:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 13, 2026 04:30:00 PM" data-start="February 12, 2026 04:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Cruz Azul vs Vancouver FC</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Elche vs Osasuna</a></td>
 <td>February 12, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 13, 2026 05:00:00 PM" data-start="February 12, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Monaco vs Nantes</a></td>
+<td>February 12, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 13, 2026 05:00:00 PM" data-start="February 12, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Independiente Del Valle vs Inter Miami</a></td>
+<td>February 12, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 13, 2026 05:00:00 PM" data-start="February 12, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Puebla vs Pumas UNAM</a></td>
+<td>February 12, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 13, 2026 05:00:00 PM" data-start="February 12, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Toluca vs Tijuana</a></td>
+<td>February 12, 2026 7:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 13, 2026 05:00:00 PM" data-start="February 12, 2026 05:00:00 PM" span=""></span></td>
 </tr>
 <tr>
