--- a/soccer.html
+++ b/soccer.html
@@ -100,43 +100,43 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-1">PSG vs Rennes</a></td>
-<td>February 13, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 14, 2026 12:00:00 PM" data-start="February 13, 2026 12:00:00 PM" span=""></span></td>
+<td>February 13, 2026 10:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 14, 2026 10:00:00 AM" data-start="February 13, 2026 10:00:00 AM" span=""></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-2">Santa Clara vs Benfica</a></td>
+<td>February 13, 2026 10:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 14, 2026 10:30:00 AM" data-start="February 13, 2026 10:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Dortmund vs Mainz 05</a></td>
+<td>February 13, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 14, 2026 11:30:00 AM" data-start="February 13, 2026 11:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Wrexham vs Ipswich Town</a></td>
+<td>February 13, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 14, 2026 11:45:00 AM" data-start="February 13, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Hull City vs Chelsea</a></td>
+<td>February 13, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 14, 2026 11:45:00 AM" data-start="February 13, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Pisa vs Milan</a></td>
+<td>February 13, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 14, 2026 11:45:00 AM" data-start="February 13, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Elche vs Osasuna</a></td>
 <td>February 13, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 14, 2026 12:00:00 PM" data-start="February 13, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Dortmund vs Mainz 05</a></td>
-<td>February 13, 2026 2:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 14, 2026 02:00:00 PM" data-start="February 13, 2026 02:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Wrexham vs Ipswich Town</a></td>
-<td>February 13, 2026 2:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 14, 2026 02:30:00 PM" data-start="February 13, 2026 02:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Hull City vs Chelsea</a></td>
-<td>February 13, 2026 4:15 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 14, 2026 04:15:00 PM" data-start="February 13, 2026 04:15:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Pisa vs Milan</a></td>
-<td>February 13, 2026 4:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 14, 2026 04:30:00 PM" data-start="February 13, 2026 04:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Elche vs Osasuna</a></td>
-<td>February 13, 2026 5:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 14, 2026 05:00:00 PM" data-start="February 13, 2026 05:00:00 PM" span=""></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/soccer-streams-8">Monaco vs Nantes</a></td>
-<td>February 13, 2026 5:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 14, 2026 05:00:00 PM" data-start="February 13, 2026 05:00:00 PM" span=""></span></td>
+<td>February 13, 2026 12:05 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 14, 2026 12:05:00 PM" data-start="February 13, 2026 12:05:00 PM" span=""></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-9">Independiente Del Valle vs Inter Miami</a></td>
