--- a/nba.html
+++ b/nba.html
@@ -148,42 +148,42 @@
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-1">
-         Milwaukee Bucks vs Oklahoma City Thunder
+         NBA All Star Celebrity Game
         </a>
        </td>
        <td>
-        February 12, 2026 4:30 PM
+        February 12, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 13, 2026 4:30 PM:00" data-start="February 12, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="February 14, 2026 4:30 PM:00" data-start="February 13, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-2">
-         Portland Trail Blazers vs Utah Jazz
+         NBA Rising Stars Challenge
         </a>
        </td>
        <td>
         February 12, 2026 6:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 13, 2026 6:00 PM:00" data-start="February 12, 2026 6:00 PM:00">
+        <span class="countdown-timer" data-end="February 14, 2026 6:00 PM:00" data-start="February 13, 2026 6:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-3">
-         Dallas Mavericks vs Los Angeles Lakers
+         NBA All Star HBCU Classic
         </a>
        </td>
        <td>
-        February 12, 2026 7:00 PM
+        February 12, 2026 8:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 13, 2026 7:00 PM:00" data-start="February 12, 2026 7:00 PM:00">
+        <span class="countdown-timer" data-end="February 14, 2026 7:00 PM:00" data-start="February 13, 2026 8:00 PM:00">
         </span>
        </td>
       </tr>
