--- a/motorsports.html
+++ b/motorsports.html
@@ -98,19 +98,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/f1">Formula 1 - Preseason Testing [LAST HOUR]</a></td>
-<td>February 12, 2026 07:00 AM</td>
-<td><span class="countdown-timer" data-end="February 13, 2026 16:00:00" data-start="February 12, 2026 04:00:00"></span>
+<td><a href="https://roxiestreams.info/f1">NASCAR Craftman Truck Series - Qualifying</a></td>
+<td>February 13, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 04:00:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.info/nascar">NASCAR Craftsman Truck Series</a></td>
-<td>February 12, 2026 14:00 PM</td>
-<td><span class="countdown-timer" data-end="February 13, 2026 16:00:00" data-start="February 12, 2026 04:00:00"></span>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series</a></td>
+<td>February 13, 2026 14:30 PM</td>
+<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 02:30:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.info/f1">Formula 1 - Preseason Testing [LAST HOUR]</a></td>
-<td>February 13, 2026 07:00 AM</td>
-<td><span class="countdown-timer" data-end="February 13, 2026 16:00:00" data-start="February 13, 2026 04:00:00"></span>
+<td><a href="https://roxiestreams.info/f1">NASCAR Craftman Truck Series - Race</a></td>
+<td>February 13, 2026 16:30 PM</td>
+<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 04:30:00"></span>
 </td>
 <tr>
 </tr></tr></tr></tr></tbody>
