--- a/index.html
+++ b/index.html
@@ -217,40 +217,41 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 12, 2026</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 10, 2026 00:01:00 AM"></span></td>
+<td>February 13, 2026</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 13, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/f1">Formula 1 - Preseason Testing [LAST HOUR]</a></td>
-<td>February 12, 2026 07:00 AM</td>
-<td><span class="countdown-timer" data-end="February 13, 2026 07:00:00 AM" data-start="February 12, 2026 07:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Ligue 1</a></td>
+<td>February 13, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 14, 2026 10:00:00 AM" data-start="February 13, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/darts">Premier League Darts - Night 2</a></td>
-<td>February 12, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="February 13, 2026 11:00:00 AM" data-start="February 12, 2026 11:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/soccer">FA Cup</a></td>
+<td>February 13, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="February 14, 2026 11:45:00 AM" data-start="February 13, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Premier League</a></td>
-<td>February 12, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 13, 2026 12:00:00 PM" data-start="February 12, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Laliga</a></td>
+<td>February 13, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 14, 2026 12:00:00 PM" data-start="February 13, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Copa Del Rey</a></td>
-<td>February 12, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 13, 2026 12:00:00 PM" data-start="February 12, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/nba">NBA All Star</a></td>
+<td>February 13, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 14, 2026 04:00:00 PM" data-start="February 13, 2026 04:00:00 PM"></span></td>
 </tr>
-<tr>
+
 <td><a href="https://roxiestreams.info/nascar">NASCAR Craftsman Truck Series</a></td>
-<td>February 12, 2026 2:00 PM</td>
+<td>February 13, 2026 4:30 PM</td>
 <td><span class="countdown-timer" data-end="February 13, 2026 02:00:00 PM" data-start="February 12, 2026 02:00:00 PM"></span></td>
+
+<tr>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE Smackdown</a></td>
+<td>February 13, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 14, 2026 05:00:00 PM" data-start="February 13, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 12, 2026 4:30 PM</td>
-<td><span class="countdown-timer" data-end="February 13, 2026 04:30:00 PM" data-start="February 12, 2026 04:30:00 PM"></span></td>
-</tr>
-</tbody>
+</tr></tbody>
 </table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
