--- a/f1.html
+++ b/f1.html
@@ -103,7 +103,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/f1.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/f1.m3u8')">24/7 SKY F1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
