--- a/ncaa-streams-1.html
+++ b/ncaa-streams-1.html
@@ -123,7 +123,7 @@ var domains = [];
 var subdomain = '601';  // Edit this per HTML file
 
 // Load domains from txt file
-fetch('domainsa.txt')
+fetch('domains.txt')
   .then(response => response.text())
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
@@ -131,7 +131,7 @@ fetch('domainsa.txt')
     setTimeout(() => showPlayer('clappr', getRandomStream('ncaa.m3u8')), 500);
   })
   .catch(() => {
-    console.error('Failed to load domainsa.txt');
+    console.error('Failed to load domains.txt');
   });
 
 function getRandomStream(streamPath, subdomain = '601') {
