--- a/motorsports.html
+++ b/motorsports.html
@@ -98,7 +98,7 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/f1">NASCAR Craftman Truck Series - Qualifying</a></td>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Craftman Truck Series - Qualifying</a></td>
 <td>February 13, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 12:00:00"></span>
 </td>
@@ -108,7 +108,7 @@
 <td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 14:30:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.info/f1">NASCAR Craftman Truck Series - Race</a></td>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Craftman Truck Series - Race</a></td>
 <td>February 13, 2026 16:30 PM</td>
 <td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 16:30:00"></span>
 </td>
