--- a/soccer-streams-13.html
+++ b/soccer-streams-13.html
@@ -124,7 +124,7 @@ var domains = [];
 var subdomain = '601';  // Edit this per HTML file
 
 // Load domains from txt file
-fetch('domains.txt')
+fetch('domainsa.txt')
   .then(response => response.text())
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
@@ -132,7 +132,7 @@ fetch('domains.txt')
     setTimeout(() => showPlayer('clappr', getRandomStream('tudn.m3u8')), 500);
   })
   .catch(() => {
-    console.error('Failed to load domains.txt');
+    console.error('Failed to load domainsa.txt');
   });
 
 function getRandomStream(streamPath, subdomain = '601') {
