--- a/supercross.html
+++ b/supercross.html
@@ -125,7 +125,7 @@ var domains = [];
 var subdomain = '601';  // Edit this per HTML file
 
 // Load domains from txt file
-fetch('domainsa.txt')
+fetch('domainsb.txt')
   .then(response => response.text())
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
@@ -133,7 +133,7 @@ fetch('domainsa.txt')
     setTimeout(() => showPlayer('clappr', getRandomStream('sx.m3u8')), 500);
   })
   .catch(() => {
-    console.error('Failed to load domainsa.txt');
+    console.error('Failed to load domainsb.txt');
   });
 
 function getRandomStream(streamPath, subdomain = '601') {
