--- a/olympics.html
+++ b/olympics.html
@@ -114,92 +114,7 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Speed Skating : Men's 10000m (TNT 4)</a></td>
-<td>February 13, 2026 08:00 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 08:00:00 AM" data-start="February 13, 2026 08:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Skeleton : Women's Heat 2 (TNT 2)</a></td>
-<td>February 13, 2026 08:45 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 08:45:00 AM" data-start="February 13, 2026 08:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Ice Hockey : Women's Quarter-Final: TBA v TBA (TNT 4)</a></td>
-<td>February 13, 2026 09:15 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 09:15:00 AM" data-start="February 13, 2026 09:15:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Ice Hockey : Women's Quarter-Final: Czechia v Sweden (TNT 4)</a></td>
-<td>February 13, 2026 09:15 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 09:15:00 AM" data-start="February 13, 2026 09:15:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Skeleton : Men's Heat 3 (TNT 2)</a></td>
-<td>February 13, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 10:00:00 AM" data-start="February 13, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Snowboarding : Men's Halfpipe Final (TNT 4)</a></td>
-<td>February 13, 2026 10:15 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 10:15:00 AM" data-start="February 13, 2026 10:15:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Men's Snowboard Halfpipe Final (NBC)</a></td>
-<td>February 13, 2026 10:30 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 10:30:00 AM" data-start="February 13, 2026 10:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Day 7 (TNT 2)</a></td>
-<td>February 13, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 11:30:00 AM" data-start="February 13, 2026 11:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Skeleton : Men's Heat 4 (TNT 2)</a></td>
-<td>February 13, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 11:45:00 AM" data-start="February 13, 2026 11:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Skeleton : Men's Heat 4 (TNT 2)</a></td>
-<td>February 13, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 12:00:00 PM" data-start="February 13, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Figure Skating : Men's Free Skating (TNT 4)</a></td>
-<td>February 13, 2026 12:15 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 12:15:00 PM" data-start="February 13, 2026 12:15:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Figure Skating : Men's Free Skating (TNT 2)</a></td>
-<td>February 13, 2026 01:15 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 01:15:00 PM" data-start="February 13, 2026 01:15:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Ciao Cortina : Day 7 (TNT 2)</a></td>
-<td>February 13, 2026 02:30 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 02:30:00 PM" data-start="February 13, 2026 02:30:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">FIA World Rally Championship : Rally Sweden: Daily Highlights (TNT 4)</a></td>
-<td>February 13, 2026 02:30 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 02:30:00 PM" data-start="February 13, 2026 02:30:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Snowboarding : Women's Snowboard Cross (TNT 2)</a></td>
-<td>February 13, 2026 03:00 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 03:00:00 PM" data-start="February 13, 2026 03:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Skeleton : Men's Heats 3 and 4 (TNT 2)</a></td>
-<td>February 13, 2026 04:00 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 04:00:00 PM" data-start="February 13, 2026 04:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Curling : Women's Round Robin: Great Britain v Republic of Korea (TNT 2)</a></td>
-<td>February 13, 2026 05:00 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 05:00:00 PM" data-start="February 13, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: The Olympics : Figure Skating, Snowboarding, Skeleton: Primetime in Milan (NBC)</a></td>
+<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: Figure Skating, Snowboarding, Skeleton: Primetime in Milan (NBC)</a></td>
 <td>February 13, 2026 05:00 PM</td>
 <td><span class="countdown-timer" data-end="February 14, 2026 05:00:00 PM" data-start="February 13, 2026 05:00:00 PM"></span></td>
 </tr>
@@ -217,11 +132,6 @@
 <td><a href="https://roxiestreams.info/olympics-1">Olympic Late Night: Biathlon, Skeleton (NBC)</a></td>
 <td>February 13, 2026 08:35 PM</td>
 <td><span class="countdown-timer" data-end="February 14, 2026 08:35:00 PM" data-start="February 13, 2026 08:35:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">A-League : Melbourne Victory v Brisbane Roar FC (TNT 4)</a></td>
-<td>February 13, 2026 10:01 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 10:01:00 PM" data-start="February 13, 2026 10:01:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/olympics-1">Skeleton : Men's Heats 3 and 4 (TNT 2)</a></td>
@@ -384,11 +294,6 @@
 <td><span class="countdown-timer" data-end="February 15, 2026 12:45:00 PM" data-start="February 14, 2026 12:45:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">2026 NBA All-Star Saturday Night (NBC)</a></td>
-<td>February 14, 2026 02:00 PM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 02:00:00 PM" data-start="February 14, 2026 02:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Ciao Cortina : Day 8 (TNT 2)</a></td>
 <td>February 14, 2026 02:30 PM</td>
 <td><span class="countdown-timer" data-end="February 15, 2026 02:30:00 PM" data-start="February 14, 2026 02:30:00 PM"></span></td>
@@ -429,7 +334,7 @@
 <td><span class="countdown-timer" data-end="February 15, 2026 05:00:00 PM" data-start="February 14, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: The Olympics : Cross-Country Skiing, Alpine Skiing, Speed Skating: Primetime in Milan (NBC)</a></td>
+<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: Cross-Country Skiing, Alpine Skiing, Speed Skating: Primetime in Milan (NBC)</a></td>
 <td>February 14, 2026 05:00 PM</td>
 <td><span class="countdown-timer" data-end="February 15, 2026 05:00:00 PM" data-start="February 14, 2026 05:00:00 PM"></span></td>
 </tr>
