--- a/motorsports.html
+++ b/motorsports.html
@@ -98,19 +98,24 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/nascar">NASCAR Craftman Truck Series - Qualifying</a></td>
-<td>February 13, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/arca">ARCA Menards Series - Race</a></td>
+<td>February 14, 2026 09:15 AM</td>
 <td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 12:00:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series</a></td>
-<td>February 13, 2026 14:30 PM</td>
+<td><a href="https://roxiestreams.info/sx">AMA Supercross Seattle - Qualifyings</a></td>
+<td>February 14, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 12:00:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series - Practice</a></td>
+<td>February 13, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 14:30:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.info/nascar">NASCAR Craftman Truck Series - Race</a></td>
-<td>February 13, 2026 16:30 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 16:30:00"></span>
+<td><a href="https://roxiestreams.info/sx">AMA Supercross Seattle - Heats/Race</a></td>
+<td>February 14, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 12:00:00"></span>
 </td>
 <tr>
 </tr></tr></tr></tr></tbody>
