--- a/nba.html
+++ b/nba.html
@@ -187,6 +187,20 @@
         </span>
        </td>
       </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         NBA All-Star Saturday
+        </a>
+       </td>
+       <td>
+        February 14, 2026 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 15, 2026 7:00 PM:00" data-start="February 14, 2026 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
      </tbody>
     </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
