--- a/olympics.html
+++ b/olympics.html
@@ -114,21 +114,6 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: Figure Skating, Snowboarding, Skeleton: Primetime in Milan (NBC)</a></td>
-<td>February 13, 2026 05:00 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 05:00:00 PM" data-start="February 13, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Skeleton : Men's Heats 3 and 4 (TNT 2)</a></td>
-<td>February 13, 2026 07:30 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 07:30:00 PM" data-start="February 13, 2026 07:30:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Curling : Women's Round Robin: Great Britain v Republic of Korea (TNT 2)</a></td>
-<td>February 13, 2026 08:30 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 08:30:00 PM" data-start="February 13, 2026 08:30:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Olympic Late Night: Biathlon, Skeleton (NBC)</a></td>
 <td>February 13, 2026 08:35 PM</td>
 <td><span class="countdown-timer" data-end="February 14, 2026 08:35:00 PM" data-start="February 13, 2026 08:35:00 PM"></span></td>
@@ -304,11 +289,6 @@
 <td><span class="countdown-timer" data-end="February 15, 2026 03:00:00 PM" data-start="February 14, 2026 03:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">UCI Continental Circuits : Vuelta a la Región de Murcia: Stage 2 (TNT 4)</a></td>
-<td>February 14, 2026 03:00 PM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 03:00:00 PM" data-start="February 14, 2026 03:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Alpine Skiing : Men's Giant Slalom: 2nd Run (TNT 2)</a></td>
 <td>February 14, 2026 03:30 PM</td>
 <td><span class="countdown-timer" data-end="February 15, 2026 03:30:00 PM" data-start="February 14, 2026 03:30:00 PM"></span></td>
@@ -319,34 +299,14 @@
 <td><span class="countdown-timer" data-end="February 15, 2026 04:00:00 PM" data-start="February 14, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">UCI ProSeries Cycling : Figueria Champions Classic (TNT 4)</a></td>
-<td>February 14, 2026 04:00 PM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 04:00:00 PM" data-start="February 14, 2026 04:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Skeleton : Women's Heats 3 and 4 (TNT 2)</a></td>
 <td>February 14, 2026 05:00 PM</td>
 <td><span class="countdown-timer" data-end="February 15, 2026 05:00:00 PM" data-start="February 14, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">A-League : Melbourne Victory v Brisbane Roar FC (TNT 4)</a></td>
+<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: Cross-Country Skiing, Alpine Skiing, Speed Skating (NBC)</a></td>
 <td>February 14, 2026 05:00 PM</td>
 <td><span class="countdown-timer" data-end="February 15, 2026 05:00:00 PM" data-start="February 14, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: Cross-Country Skiing, Alpine Skiing, Speed Skating: Primetime in Milan (NBC)</a></td>
-<td>February 14, 2026 05:00 PM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 05:00:00 PM" data-start="February 14, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">A-League : Sydney FC v Adelaide United (TNT 4)</a></td>
-<td>February 14, 2026 06:00 PM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 06:00:00 PM" data-start="February 14, 2026 06:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">A-League Women : Wellington Phoenix v Central Coast Mariners (TNT 4)</a></td>
-<td>February 14, 2026 07:00 PM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 07:00:00 PM" data-start="February 14, 2026 07:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Womens's Dual Moguls (TNT 2)</a></td>
@@ -364,17 +324,7 @@
 <td><span class="countdown-timer" data-end="February 15, 2026 08:30:00 PM" data-start="February 14, 2026 08:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">UCI ProSeries Cycling : Figueria Champions Classic (TNT 4)</a></td>
-<td>February 14, 2026 09:00 PM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 09:00:00 PM" data-start="February 14, 2026 09:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Womens's Dual Moguls (TNT 2)</a></td>
-<td>February 14, 2026 10:00 PM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 10:00:00 PM" data-start="February 14, 2026 10:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">A-League Women : Melbourne Victory v Melbourne City FC (TNT 4)</a></td>
 <td>February 14, 2026 10:00 PM</td>
 <td><span class="countdown-timer" data-end="February 15, 2026 10:00:00 PM" data-start="February 14, 2026 10:00:00 PM"></span></td>
 </tr>
