--- a/motorsports.html
+++ b/motorsports.html
@@ -100,25 +100,25 @@
 <tr>
 <td><a href="https://roxiestreams.info/arca">ARCA Menards Series - Race</a></td>
 <td>February 14, 2026 09:15 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 12:00:00"></span>
+<td><span class="countdown-timer" data-end="February 14, 2026 21:15:00" data-start="February 14, 2026 09:15:00"></span>
 </td>
 <tr>
 <td><a href="https://roxiestreams.info/sx">AMA Supercross Seattle - Qualifyings</a></td>
 <td>February 14, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 12:00:00"></span>
+<td><span class="countdown-timer" data-end="February 14, 2026 22:00:00" data-start="February 14, 2026 10:00:00"></span>
 </td>
 <tr>
 <td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series - Practice</a></td>
-<td>February 13, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 14:30:00"></span>
+<td>February 14, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 15, 2026 00:00:00" data-start="February 14, 2026 12:00:00"></span>
 </td>
 <tr>
 <td><a href="https://roxiestreams.info/sx">AMA Supercross Seattle - Heats/Race</a></td>
 <td>February 14, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 13, 2026 12:00:00"></span>
+<td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 14, 2026 04:00:00"></span>
 </td>
 <tr>
-</tr></tr></tr></tr></tbody>
+</tr></tr></tr></tr></tr></tbody>
 </table>
 </div>
 </div>
