--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ If you're having issues with streams, try refreshing the page or using an incogn
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/supercross">AMA Supercross Seattle</a></td>
-<td>February 14, 2026 10:00 AM</td>
+<td>February 14, 2026 10:00 AM/4:00 PM</td>
 <td><span class="countdown-timer" data-end="February 15, 2026 10:00:00 AM" data-start="February 14, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
