--- a/motorsports.html
+++ b/motorsports.html
@@ -103,7 +103,7 @@
 <td><span class="countdown-timer" data-end="February 14, 2026 21:15:00" data-start="February 14, 2026 09:15:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.info/sx">AMA Supercross Seattle - Qualifyings</a></td>
+<td><a href="https://roxiestreams.info/supercross">AMA Supercross Seattle - Qualifyings</a></td>
 <td>February 14, 2026 10:00 AM</td>
 <td><span class="countdown-timer" data-end="February 14, 2026 22:00:00" data-start="February 14, 2026 10:00:00"></span>
 </td>
@@ -113,7 +113,7 @@
 <td><span class="countdown-timer" data-end="February 15, 2026 00:00:00" data-start="February 14, 2026 12:00:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.info/sx">AMA Supercross Seattle - Heats/Race</a></td>
+<td><a href="https://roxiestreams.info/supercross">AMA Supercross Seattle - Heats/Race</a></td>
 <td>February 14, 2026 4:00 PM</td>
 <td><span class="countdown-timer" data-end="February 14, 2026 16:00:00" data-start="February 14, 2026 04:00:00"></span>
 </td>
