--- a/rugby-1.html
+++ b/rugby-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Roxiestreams - DLHD Stream</title>
+    <title>Roxiestreams</title>
     <meta name="description" content="Free PPV UFC, TV, NBA, NFL, and F1 streams">
     <meta name="keywords" content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -89,7 +89,6 @@
 
     <div class="container container-fluid pt-2 text-white">
         <div class="fullplayer">
-            <!-- DLHD iframe only (no Clappr) -->
             <iframe class="dlhd-iframe" src="https://dlhd.link/stream/stream-350.php"></iframe>
 
             <!-- Optional: keep the YouTube chat on the right -->
