--- a/index.html
+++ b/index.html
@@ -217,39 +217,29 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 14, 2026</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 14, 2026 00:01:00 AM"></span></td>
+<td>February 15, 2026</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 15, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer">FA Cup</a></td>
-<td>February 14, 2026 04:30 AM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 04:30:00 AM" data-start="February 14, 2026 04:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Laliga</a></td>
-<td>February 14, 2026 05:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Laliga</a></td>
+<td>February 15, 2026 05:00 AM</td>
 <td><span class="countdown-timer" data-end="February 15, 2026 05:00:00 AM" data-start="February 14, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/supercross">AMA Supercross Seattle</a></td>
-<td>February 14, 2026 10:00 AM/4:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer">FA Cup</a></td>
+<td>February 15, 2026 05:30 AM</td>
+<td><span class="countdown-timer" data-end="February 15, 2026 04:30:00 AM" data-start="February 14, 2026 04:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series - Daytona</a></td>
+<td>February 15, 2026 11:00 AM</td>
 <td><span class="countdown-timer" data-end="February 15, 2026 10:00:00 AM" data-start="February 14, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Derby d'Italia (Inter Milan vs Juve)</a></td>
-<td>February 14, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 11:45:00 AM" data-start="February 14, 2026 11:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/nba-streams-1">NBA All Star Saturday</a></td>
-<td>February 14, 2026 3:00 PM</td>
+<td><a href="https://roxiestreams.info/nba-streams-1">NBA All Star Sunday</a></td>
+<td>February 15, 2026 2:00 PM</td>
 <td><span class="countdown-timer" data-end="February 15, 2026 03:00:00 PM" data-start="February 14, 2026 03:00:00 PM"></span></td>
 </tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-16">El Súper Clásico</a></td>
-<td>February 14, 2026 7:07 PM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 07:07:00 PM" data-start="February 14, 2026 07:07:00 PM"></span>
-</td>
 <tr>
 </tr></tr></tbody>
 </table>
