--- a/soccer-streams-11.html
+++ b/soccer-streams-11.html
@@ -104,6 +104,7 @@
             <div id="playerContainer"></div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt.m3u8', '601'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('arsenal.m3u8', '601'))">Stream 2</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
