--- a/nascar.html
+++ b/nascar.html
@@ -103,8 +103,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nascar.m3u8')">Stream 1 (FOX)</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nas.m3u8')">Stream 2 (International</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.833577.xyz/nascar.m3u8')">Stream 1 (FOX)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.833577.xyz/nas.m3u8')">Stream 2 (International)</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
@@ -139,7 +139,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nascar.m3u8');
+            showPlayer('clappr', 'https://daffodil.833577.xyz/nascar.m3u8');
         };
     </script>
     <script>
