--- a/soccer.html
+++ b/soccer.html
@@ -99,124 +99,29 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Udinese vs Sassuolo</a></td>
-<td>February 15, 2026 3:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 03:30:00 AM" data-start="February 15, 2026 03:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Macclesfield vs Brentford</a></td>
+<td>February 16, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 17, 2026 11:30:00 AM" data-start="February 16, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Birmingham City vs Leeds United</a></td>
-<td>February 15, 2026 4:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 04:00:00 AM" data-start="February 15, 2026 04:00:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Cagliari vs Leece</a></td>
+<td>February 16, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 17, 2026 11:45:00 AM" data-start="February 16, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Real Oviedo vs Athletic Club</a></td>
-<td>February 15, 2026 5:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 05:00:00 AM" data-start="February 15, 2026 05:00:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Girona vs Barcelona</a></td>
+<td>February 16, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 17, 2026 12:00:00 PM" data-start="February 16, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Grimsby Town vs Wolves</a></td>
-<td>February 15, 2026 5:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 05:30:00 AM" data-start="February 15, 2026 05:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Coventry City vs Middlesbrough</a></td>
+<td>February 16, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 17, 2026 12:00:00 PM" data-start="February 16, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Stoke City vs Fulham</a></td>
-<td>February 15, 2026 6:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 06:00:00 AM" data-start="February 15, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Oxford United vs Sunderland</a></td>
-<td>February 15, 2026 6:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 06:00:00 AM" data-start="February 15, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Cremonese vs Genoa</a></td>
-<td>February 15, 2026 6:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 06:00:00 AM" data-start="February 15, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Le Havre vs Toulouse</a></td>
-<td>February 15, 2026 6:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 06:00:00 AM" data-start="February 15, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Kilmarnock vs Celtic</a></td>
-<td>February 15, 2026 6:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 06:00:00 AM" data-start="February 15, 2026 06:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Augsburg vs Heidenheim</a></td>
-<td>February 15, 2026 6:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 06:30:00 AM" data-start="February 15, 2026 06:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Rayo Vallecano vs Atletico Madrid/a&gt;</a></td>
-<td>February 15, 2026 7:15 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 07:15:00 AM" data-start="February 15, 2026 07:15:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Lorient vs Angers SCO</a></td>
-<td>February 15, 2026 8:15 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 08:15:00 AM" data-start="February 15, 2026 08:15:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Metz vs Auxerre</a></td>
-<td>February 15, 2026 8:15 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 08:15:00 AM" data-start="February 15, 2026 08:15:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Arsenal vs Wigan Athletic</a></td>
-<td>February 15, 2026 8:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 08:30:00 AM" data-start="February 15, 2026 08:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">RB Leipzig vs Wolfsburg</a></td>
-<td>February 15, 2026 8:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 08:30:00 AM" data-start="February 15, 2026 08:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Torino vs Bologna</a></td>
-<td>February 15, 2026 9:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 09:00:00 AM" data-start="February 15, 2026 09:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Levante vs Valencia</a></td>
-<td>February 15, 2026 9:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 09:30:00 AM" data-start="February 15, 2026 09:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Lyon vs Nice</a></td>
-<td>February 15, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 11:45:00 AM" data-start="February 15, 2026 11:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Napoli vs Roma</a></td>
-<td>February 15, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 11:45:00 AM" data-start="February 15, 2026 11:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Mallorca vs Real Betis</a></td>
-<td>February 15, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 12:00:00 PM" data-start="February 15, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Botafogo vs Flamengo</a></td>
-<td>February 15, 2026 12:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 12:30:00 PM" data-start="February 15, 2026 12:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">Cruz Azul vs Tigres UANL</a></td>
-<td>February 15, 2026 2:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 02:30:00 PM" data-start="February 15, 2026 02:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-14">Boca Juniors vs Platense</a></td>
-<td>February 15, 2026 2:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 02:30:00 PM" data-start="February 15, 2026 02:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-15">Ypiranga Erechim vs Internacional</a></td>
-<td>February 15, 2026 3:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 16, 2026 03:30:00 PM" data-start="February 15, 2026 03:30:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Fluminense vs Bangu</a></td>
+<td>February 16, 2026 1:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 17, 2026 01:00:00 PM" data-start="February 16, 2026 01:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
