--- a/fighting.html
+++ b/fighting.html
@@ -100,9 +100,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE Smackdown</a></td>
-<td>February 13, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 13, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
+<td>February 16, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 16, 2026 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
